Bug 610491: Preemptively stop SVG animations in SVG-as-an-image in OnStartRequest. r=roc a=roc